<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TODO Лист</string>
    <string name="dateOfCreation">Дата создания</string>
    <string name="caption">Наименование</string>
    <string name="descr">Описание</string>
    <string name="type">Тип</string>
    <string name="ref">Файл</string>
    <string name="deadline">Дедлайн</string>
    <string name="add_button">+</string>
    <string name="del_button">-</string>
    <string name="write">Записать</string>
    <string name="deselect">Отменить выделение</string>
    <string name="sortBy">Сортировать</string>
    <string name="filterBy">Фильтровать</string>
    <string name="remind">Напомнить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="saving">Сохранение</string>
    <string name="saved">cохранен</string>
    <string name="select_all">Выделить все</string>
    <string name="deselect_all">Отменить выделение</string>
    <string name="settings">Настройки</string>
    <string name="find">Найти</string>
    <string name="cancel_find">Отмена поиска</string>
    <string name="exit">Выход: Вы уверены?</string>

    <string-array name="sorts" tools:ignore="MissingTranslation">
        <item>Без сортировки</item>
        <item>deadline</item>
        <item>caption</item>
    </string-array>
    <string-array name="typesFilter" tools:ignore="MissingTranslation">
        <item>Без фильтра</item>
        <item>Note</item>
        <item>Task</item>
    </string-array>
    <string-array name="types" tools:ignore="MissingTranslation">
        <item>Note</item>
        <item>Task</item>
    </string-array>
</resources>
