<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/find"
        android:title="@string/find"
        android:icon="@android:drawable/ic_menu_search"/>
    <item
        android:id="@+id/cancel_find"
        android:title="@string/cancel_find"
        android:icon="@android:drawable/ic_menu_search"
        android:visible="false"/>
    <item
        android:id="@+id/select_all"
        android:title="@string/select_all"
        android:icon="@android:drawable/checkbox_on_background"/>
    <item
        android:id="@+id/deselect_all"
        android:title="@string/deselect_all"
        android:icon="@android:drawable/checkbox_off_background"
        android:visible="false"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
</menu>