<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lvMain"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/find"
        android:inputType="textPersonName"
        android:textSize="12sp"
        android:focusable="true"
        android:visibility="gone"
        android:layout_marginLeft="5dp"
        android:layout_alignRight="@+id/lvMain"><requestFocus/></EditText>

    <LinearLayout
        android:id="@+id/llFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFind"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:layout_marginRight="5dp" />

        <Spinner
            android:id="@+id/spSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:layout_marginRight="5dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvMain"
        style="@style/Widget.AppCompat.Light.ListView.DropDown"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llFilter"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/circle_button_green"
        android:onClick="onClickButton"
        android:text="@string/add_button"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/circle_button_red"
        android:onClick="onClickButton"
        android:text="@string/del_button"
        android:visibility="gone"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="true" />

</RelativeLayout>